# AdventOfCode

./: .gitignore  README.md  update_readme.py
.github/workflows/: update_readme.yml
.scripts/: update_readme.py  update_readme.sh
2015/: 01.R  02.R  03.R  04.R  05.R  06.R  07.R  08.R  09.R  10.R  11.R  12.R  13.R  14.R  15.R  16.R  17.R  18.R  19.R  20.R  21.R  22.R  23.R  24.R  25.R  README.md  utils.R
2016/: 01.cs  02.cs  03.cs  04.cs  05.cs  06.cs  07.cs  08.cs  09.cs  10.cs  11.cs  12.cs  13.cs  14.cs  15.cs  16.cs  17.cs  18.cs  19.cs  20.cs  2016.csproj  21.cs  22.cs  23.cs  24.cs  25.cs  Program.cs  README.md  Utils.cs
2017/: 01.fs  02.fs  03.fs  04.fs  05.fs  06.fs  07.fs  08.fs  09.fs  10.fs  11.fs  12.fs  13.fs  14.fs  15.fs  16.fs  17.fs  18.fs  19.fs  20.fs  2017.fsproj  21.fs  22.fs  23.fs  24.fs  25.fs  Program.fs  README.md  Utils.fs
2018/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  08.js  09.js  10.js  11.js  12.js  13.js  14.js  15.js  16.js  17.js  18.js  19.js  20.js  21.js  22.js  23.js  24.js  25.js  README.md  package-lock.json  package.json  utils.js
2019/: 01.lua  02.lua  03.lua  04.lua  05.lua  06.lua  07.lua  08.lua  09.lua  10.lua  11.lua  12.lua  13.lua  14.lua  15.lua  16.lua  17.lua  18.lua  19.lua  20.lua  21.lua  22.lua  23.lua  24.lua  25.lua  README.md  utils.lua
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  README.md  utils.py
2023/CSharp/: 01.cs
2023/Python/: 01.py  02.py  03.py  05.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2024/: Cargo.toml  README.md
2024/src/: _01.rs  _02.rs  _03.rs  _04.rs  _05.rs  _06.rs  _07.rs  _08.rs  _09.rs  _10.rs  _11.rs  _12.rs  _13.rs  _14.rs  _15.rs  _16.rs  _17.rs  _18.rs  _19.rs  _20.rs  _21.rs  _22.rs  _23.rs  _24.rs  _25.rs  main.rs  utils.rs
2025/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  README.md  aoc.cabal  aoe.cabal  hie.yaml  stack.yaml  utils.hs
