cabal-version:       3.0
name:                aoc
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      .
  exposed-modules:     Utils
  build-depends:       base >=4.17 && <5, directory, filepath, process
  default-language:    Haskell2010

executable day01
  hs-source-dirs:      .
  main-is:             01.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  other-modules:       Utils
  default-language:    Haskell2010

executable day02
  hs-source-dirs:      .
  main-is:             02.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, split, containers
  other-modules:       Utils
  default-language:    Haskell2010

executable day03
  hs-source-dirs:      .
  main-is:             03.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  other-modules:       Utils
  default-language:    Haskell2010

executable day04
  hs-source-dirs:      .
  main-is:             04.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  other-modules:       Utils
  default-language:    Haskell2010

executable day05
  hs-source-dirs:      .
  main-is:             05.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, split, containers
  other-modules:       Utils
  default-language:    Haskell2010
