cabal-version:       3.0
name:                aoc
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      .
  exposed-modules:     Utils
  build-depends:       base >=4.17 && <5, directory, filepath, process
  default-language:    Haskell2010

executable day01
  hs-source-dirs:      .
  main-is:             01.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  default-language:    Haskell2010

executable day02
  hs-source-dirs:      .
  main-is:             02.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, split, containers
  default-language:    Haskell2010

executable day03
  hs-source-dirs:      .
  main-is:             03.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  default-language:    Haskell2010

executable day04
  hs-source-dirs:      .
  main-is:             04.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  default-language:    Haskell2010

executable day05
  hs-source-dirs:      .
  main-is:             05.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, split, containers
  default-language:    Haskell2010

executable day06
  hs-source-dirs:      .
  main-is:             06.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process
  default-language:    Haskell2010

executable day07
  hs-source-dirs:      .
  main-is:             07.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, vector
  default-language:    Haskell2010

executable day08
  hs-source-dirs:      .
  main-is:             08.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, array
  default-language:    Haskell2010

executable day09
  hs-source-dirs:      .
  main-is:             09.hs
  build-depends:       base >=4.17 && <5, aoc, directory, filepath, process, containers
  default-language:    Haskell2010