cabal-version:      3.0
name:               aoc
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day01
    import:           warnings
    main-is:          01.hs
    other-modules:    Utils
    build-depends:    base, directory, filepath, process
    hs-source-dirs:   .
    default-language: Haskell2010

executable day02
    import:           warnings
    main-is:          02.hs
    other-modules:    Utils
    build-depends:    base, directory, filepath, process, split
    hs-source-dirs:   .
    default-language: Haskell2010

executable day03
    import:           warnings
    main-is:          03.hs
    other-modules:    Utils
    build-depends:    base, directory, filepath, process
    hs-source-dirs:   .
    default-language: Haskell2010